# dns-validation

./: .gitignore  CMakeLists.txt  aws.cpp  aws_lambda_example.txt  dns-exec.py  dns.cpp  dns.h  main.cpp
scripts/: make_and_upload.sh  run_lambda.sh
